# cellranger_job_templates

./: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: auto_generating_libraries_csvs.ipynb
src/cellranger_job_templates/: __init__.py  cellranger_job_templates.py  cli.py  logging.py
tests/: __init__.py  test_cellranger_count_template.py
