[tool.poetry]
name = "cellranger_job_templates"
version = "0.2.0"
description = "Generate SLURM job script for Cellranger"
authors = ["Miles Smith <miles-smith@omrf.org>"]
license = "BSD 3-clause"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
click = "^7.1.2"
black = "^20.8b1"
flake9 = "^3.8.3"
mypy = "^0.790"
Sphinx = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
